Atualizações de pagina
Modifiquei algumas paginas e adicionei o htaccess para o apache interpretar direito as urls

--- a/WebPage/Tools.html
+++ b/WebPage/Tools.html
@@ -94,8 +94,19 @@
             Our <span>Tools</span>
           </h2>
           <p>
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            Código em Python para varreduras de segurança em sites, incluindo varredura de diretórios, varredura de administradores, varredura de portas e varredura de SMTP.
           </p>
+        </div>
+
+        <div class="download-session">
+            <div>
+                <img src="./imgs/shortcuticon.png"/>
+                <h3>Frame Seven</h3>
+                <p>Clique em download no link abaixo para efetuar o download do Frame-Seven</p>
+            </div>
+            <div>
+                <a class="btn btn-warning" href="./uploads/FrameSeven-main.zip" target="_blank">DOWNLOAD</a>
+            </div>
         </div>
         
         <div class="row">
