Atualizei HTACCESS e configurei as rotas

--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -58,7 +58,7 @@
                   <a class="nav-link pl-lg-0" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Tools.html">Tools</a>
+                  <a class="nav-link" href="tools">Tools</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#about"> About</a>
@@ -104,7 +104,7 @@
                     <p>
                       Aumente seu desempenho de verdade com Frame Seven: a ferramenta de pentest que vai além dos limites da segurança cibernética!
                     </p>
-                    <a href="Tools.html">
+                    <a href="tools">
                       Use já
                     </a>
                   </div>
@@ -124,7 +124,7 @@
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste quam velit saepe dolorem deserunt quo quidem ad optio.
                     </p>
-                    <a href="Tools.html">
+                    <a href="tools">
                       Use já
                     </a>
                   </div>
@@ -144,7 +144,7 @@
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste quam velit saepe dolorem deserunt quo quidem ad optio.
                     </p>
-                    <a href="Tools.html">
+                    <a href="tools">
                       Use já
                     </a>
                   </div>
@@ -182,6 +182,18 @@
             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
           </p>
         </div>
+
+        <div class="download-session">
+          <div>
+              <img src="./imgs/shortcuticon.png"/>
+              <h3>Frame Seven</h3>
+              <p>Clique em download no link abaixo para efetuar o download do Frame-Seven</p>
+          </div>
+          <div>
+              <a class="btn btn-warning" href="./uploads/FrameSeven-main.zip" target="_blank">DOWNLOAD</a>
+          </div>
+        </div>
+
         <div class="row">
           <div class="col-md-6 ">
             <div class="box ">
@@ -197,7 +209,7 @@
                   The
                   point of using
                 </p>
-                <a href="Tools.html">
+                <a href="tools">
                   Baixe Aqui!
                 </a>
               </div>
@@ -217,7 +229,7 @@
                   The
                   point of using
                 </p>
-                <a href="Tools.html">
+                <a href="tools">
                   Baixe Aqui!
                 </a>
               </div>
@@ -237,7 +249,7 @@
                   The
                   point of using
                 </p>
-                <a href="Tools.html">
+                <a href="tools">
                   Baixe Aqui!
                 </a>
               </div>
@@ -257,7 +269,7 @@
                   The
                   point of using
                 </p>
-                <a href="Tools.html">
+                <a href="tools">
                   Baixe Aqui!
                 </a>
               </div>
@@ -265,7 +277,7 @@
           </div>
         </div>
         <div class="btn-box">
-          <a href="Tools.html">
+          <a href="tools">
             See All
           </a>
         </div>
@@ -574,8 +586,8 @@ O Framework Seven é altamente personalizável e permite que os usuários adicio
               <a class="active" href="#home">
                 Home
               </a>
-              <a class="" href="Tools.html">
-                Tools
+              <a class="" href="tools">
+                tools
               </a>
               <a class="" href="#about">
                 About
@@ -640,7 +652,9 @@ O Framework Seven é altamente personalizável e permite que os usuários adicio
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> Developed by:
-          <a href="https://www.linkedin.com/in/lucas-gomes-890073203/" id="colormaker1" >Say Seven </a> <a>and</a> <a href="https://www.linkedin.com/in/matheus-araujodev-317326248/" id="colormaker">Matheus Araujo</a>
+          <a href="https://www.linkedin.com/in/lucas-gomes-890073203/" id="colormaker1" >Say Seven </a> <a>and</a>
+          <a href="https://www.linkedin.com/in/matheus-araujodev-317326248/" id="colormaker">Matheus Araujo</a> <a>and</a>
+          <a href="https://github.com/gabriel-logan" id="colormaker">Gabriel Logan</a>
         </p>
       </div>
     </div>
