--- a/WebPage/notFound.html
+++ b/WebPage/notFound.html
@@ -40,7 +40,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand d-lg-none" href="index.html">
+            <a class="navbar-brand d-lg-none" href="/">
              
             </a>
             <a href="#HOME"><img src="./imgs/FAME SEVEN FRAGON.png" widht="80px"  height="70px"  title="Frame Seven"></a>
@@ -51,19 +51,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link pl-lg-0" href="index.html">Home </a>
+                  <a class="nav-link pl-lg-0" href="/">Home </a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="service.html">Services <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="tools">Services <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html"> About</a>
+                  <a class="nav-link" href="/"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Why Us</a>
+                  <a class="nav-link" href="/">Why Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Contact Us</a>
+                  <a class="nav-link" href="/">Contact Us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#Assessments">Assessments</a>
@@ -87,9 +87,9 @@
   <!-- service section -->
 
   <section class="service_section layout_padding">
-    <div class="service_container">
-        <h1>Página não encontrada</h1>
-        <p>Desculpe, a página que você está procurando não pode ser encontrada. Verifique se o endereço está correto ou tente novamente mais tarde.</p>
+    <div style="text-align: center;" class="service_container">
+        <h1 style="font-size: 2.7rem;">Página não encontrada</h1>
+        <p style="font-size: 1rem;">Desculpe, a página que você está procurando não pode ser encontrada. Verifique se o endereço está correto ou tente novamente mais tarde.</p>
     </div>
   </section>
 
@@ -129,19 +129,19 @@
               Links
             </h4>
             <div class="footer_links">
-              <a class="active" href="index.html">
+              <a class="active" href="/">
                 Home
               </a>
-              <a class="" href="service.html">
+              <a class="" href="tools">
                 Services
               </a>
-              <a class="" href="about.html">
+              <a class="" href="about">
                 About
               </a>
-              <a class="" href="why.html">
+              <a class="" href="why">
                 Why Us
               </a>
-              <a class="" href="contact.html">
+              <a class="" href="contact">
                 Contact Us
               </a>
             </div>
