--- a/notFound.html
+++ b/notFound.html
@@ -40,7 +40,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand d-lg-none" href="/">
+            <a class="navbar-brand d-lg-none" href="/FrameSeven-Privado/">
              
             </a>
             <a href="#HOME"><img src="./imgs/FAME SEVEN FRAGON.png" widht="80px"  height="70px"  title="Frame Seven"></a>
@@ -51,19 +51,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link pl-lg-0" href="/">Home </a>
+                  <a class="nav-link pl-lg-0" href="/FrameSeven-Privado/">Home </a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="tools">Services <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/"> About</a>
+                  <a class="nav-link" href="/FrameSeven-Privado/"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/">Why Us</a>
+                  <a class="nav-link" href="/FrameSeven-Privado/">Why Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/">Contact Us</a>
+                  <a class="nav-link" href="/FrameSeven-Privado/">Contact Us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#Assessments">Assessments</a>
@@ -129,7 +129,7 @@
               Links
             </h4>
             <div class="footer_links">
-              <a class="active" href="/">
+              <a class="active" href="/FrameSeven-Privado/">
                 Home
               </a>
               <a class="" href="tools">
