--- a/index.html
+++ b/index.html
@@ -172,18 +172,10 @@
                         Our <span>Tools</span>
                     </h2>
                     <p>
-                        Código em Python para varreduras de segurança em sites, incluindo varredura de diretórios, varredura de administradores, varredura de portas e varredura de SMTP.
+                        Código em Python para varreduras de segurança em sites, incluindo varredura de diretórios, varredura de administradores, varredura de portas e varredura de SMTP.<br>
+                         Clique em <span style="font-weight: bold;">See All</span> no link abaixo para efetuar o download do Frame-Seven e verificar mais informações sobre os programas
                     </p>
-                </div>
-
-                <div class="download-session">
-                    <div>
-                        <img src="./imgs/shortcuticon.png" />
-                        <h3>Frame Seven</h3>
-                        <p>
-                            Clique em <span style="font-weight: bold;">See All</span> no link abaixo para efetuar o download do Frame-Seven e verificar mais informações sobre os programas
-                        </p>
-                    </div>
+  
                 </div>
 
                 <div class="row">
