--- a/404.html
+++ b/404.html
@@ -199,10 +199,10 @@
         <div class="footer-info">
             <div class="container">
                 <p>
-
                     &copy; <span id="displayYear"></span> Developed by:
-                    <a href="https://www.linkedin.com/in/lucas-gomes-890073203/" id="colormaker1">Say Seven </a> <a>and</a> <a href="https://www.linkedin.com/in/matheus-araujodev-317326248/" id="colormaker">Matheus Araujo</a>
-
+                    <a href="https://www.linkedin.com/in/lucas-gomes-890073203/" id="colormaker1">Say Seven </a> <a>and</a>
+                    <a href="https://www.linkedin.com/in/matheus-araujodev-317326248/" id="colormaker">Matheus Araujo</a> <a>and</a>
+                    <a href="https://github.com/gabriel-logan" id="colormaker">Gabriel Logan</a>
                 </p>
             </div>
         </div>
